--- a/CitationMaker/CitationMaker/CitationMaker.csproj
+++ b/CitationMaker/CitationMaker/CitationMaker.csproj
@@ -62,6 +62,9 @@
       <DependentUpon>Book2.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Conf-Proc.xaml.cs">
+      <DependentUpon>Conf-Proc.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Journal.xaml.cs">
       <DependentUpon>Journal.xaml</DependentUpon>
     </Compile>
@@ -75,6 +78,10 @@
     <Page Include="Book2.xaml">
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="Conf-Proc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Journal.xaml">
       <SubType>Designer</SubType>
